--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html{
-    background-image: url("./img/dots-bg.png");
+    background-image: url("./nouvelle_version/img/dots-bg.png");
     font-family: Helvetica, sans-serif;
 }
 
