--- a/nouvelle_version/css/bootstrap.css
+++ b/nouvelle_version/css/bootstrap.css
@@ -7771,7 +7771,7 @@ button.close {
 .row:after,
 .row:before {
     display: table;
-    content: " "
+    content: " ";
 }
 
 .btn-group-vertical>.btn-group:after,
